# parab-sidecar-cpp

./: .gitignore  parabilium-sidecar-cpp.sln
parabilium-sidecar-cpp/: CMakeLists.txt  main.cpp  main.h  parabilium-sidecar-cpp.vcxproj
